--- a/.classpath
+++ b/.classpath
@@ -6,14 +6,9 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/Dishani Navanjana/Desktop/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Dishani Navanjana/Downloads/servlet-api.jar"/>
+	<classpathentry kind="lib" path="C:/Users/suran/Downloads/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0/mysql-connector-j-9.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/suran/OneDrive/Desktop/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
